--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
   "devDependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "rescript": "^11.0.0"
+    "rescript": "^12.0.0"
   },
   "peerDependencies": {
     "react": ">=19.0.0",
     "react-dom": ">=19.0.0"
+  },
+  "dependencies": {
+    "@rescript/webapi": "^0.1.0-experimental-2090589"
   }
 }
