--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
   },
   "homepage": "https://rescript-lang.org/docs/react/latest/introduction",
   "devDependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "rescript": "^11.0.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "rescript": "^12.1.0"
   },
   "peerDependencies": {
     "react": ">=19.0.0",
     "react-dom": ">=19.0.0"
+  },
+  "dependencies": {
+    "@rescript/runtime": ">=12.0.0"
   }
 }
